Use MVC route helper, start implementing new document feature and user-roles, refactor controllers, start to make types user-created and multi-dimensional, implement buddy add-remove feature,

--- a/MyCalendar.MVC/Views/Cronofy/Profiles.cshtml
+++ b/MyCalendar.MVC/Views/Cronofy/Profiles.cshtml
@@ -15,7 +15,7 @@
             <a class="list-group-item list-group-item-danger active">
                 <i class="glyphicon glyphicon-exclamation-sign"></i> MiCalendar Sync not ready - not enabled
             </a>
-            <a href="@Url.Action("Settings", "Home")" class="list-group-item list-group-item-action">
+            <a href="@Url.Action(Url.MvcRoute(Section.Profile).ControllerName, Url.MvcRoute(Section.Profile).ActionName)" class="list-group-item list-group-item-action">
                 <i class="glyphicon glyphicon-user"></i> Enable MiCalendar Sync in Profile
             </a>
         }
