--- a/MyCalendar.MVC/Views/Home/_Tags.cshtml
+++ b/MyCalendar.MVC/Views/Home/_Tags.cshtml
@@ -40,9 +40,9 @@
                     <div class="form-group">
                         <div class="input-group">
                             <select class="form-control" id="typeID" name="typeID[]" style="width: 160px" disabled="@tag.UpdateDisabled">
-                                @if (Model.Types != null && Model.Types.Any())
+                                @if (Model.TagTypes != null && Model.TagTypes.Any())
                                 {
-                                    foreach (var type in Model.Types)
+                                    foreach (var type in Model.TagTypes)
                                     {
                                     <option value="@type.Id" @(type.Id == tag.TypeID ? "selected" : "")>@type.Name</option>
                                     }
@@ -96,9 +96,9 @@
                 <div class="form-group">
                     <div class="input-group">
                         <select class="form-control" id="typeId" name="typeID[]" style="width: 160px">
-                            @if (Model.Types != null && Model.Types.Any())
+                            @if (Model.TagTypes != null && Model.TagTypes.Any())
                             {
-                                foreach (var type in Model.Types)
+                                foreach (var type in Model.TagTypes)
                                 {
                                     <option value="@type.Id">@type.Name</option>
                                 }
