--- a/MyCalendar.MVC/Views/Shared/_Layout.cshtml
+++ b/MyCalendar.MVC/Views/Shared/_Layout.cshtml
@@ -109,7 +109,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <small>&copy; @DateTime.Now.Year - @AppName <a href="/home/changelog" class="float-right">@ChangeLog.GetChangeList().OrderByDescending(x => x.Key).First().Key</a></small>
+            <small>&copy; @DateTime.Now.Year - @AppName <a href="/home/changelog" class="float-right">v2.0 BETA</a></small>
         </footer>
     </div>
 
