Initial implementation of first react component rendering in MVC for ER new order process with new customer repository

--- a/MyCalendar.MVC/Views/ErrandRunner/NewOrder.cshtml
+++ b/MyCalendar.MVC/Views/ErrandRunner/NewOrder.cshtml
@@ -4,10 +4,7 @@
 <br />
 <br />
 <br />
-<br />
-<br />
-<br />
-
-<div id="root" data-subsiteroot="/" data-contentroot="http://localhost:53822/errandrunner/neworder"></div>
+<div id="er-neworder" data-subsiteroot="/" data-contentroot="http://localhost:53822/errandrunner/neworder"></div>
+@*<div id="root" data-subsiteroot="/" data-contentroot=""></div>*@
 @Scripts.Render($"~/React/dist/bundle.js")
 
