Move react build in Scripts/dist and React app outside MVC project

--- a/MyCalendar.MVC/Views/ErrandRunner/NewOrder.cshtml
+++ b/MyCalendar.MVC/Views/ErrandRunner/NewOrder.cshtml
@@ -6,5 +6,5 @@
 <br />
 <div id="er-neworder" data-subsiteroot="/" data-contentroot="http://localhost:53822/errandrunner/neworder"></div>
 @*<div id="root" data-subsiteroot="/" data-contentroot=""></div>*@
-@Scripts.Render($"~/React/dist/bundle.js")
+@Scripts.Render($"~/Scripts/dist/bundle.js")
 
