Separate loader in its own stylesheet, initial implementation of new order component with initial customer order and registration forms. Make customer search work. Update form icons in scheduler. Add email to customer model.

--- a/MyCalendar.MVC/Views/Shared/_Layout.cshtml
+++ b/MyCalendar.MVC/Views/Shared/_Layout.cshtml
@@ -15,7 +15,7 @@
     <title>@AppName</title>
     <link href="~/Content/Site.css" rel="stylesheet" type="text/css" />
     <link href="~/Content/bootstrap.min.css" rel="stylesheet" type="text/css" />
-
+    <link href="~/Content/Loader.css" rel="stylesheet" type="text/css" />
     <!-- forms -->
     <link rel="stylesheet" type="text/css" href="~/Content/form/css/util.css">
     <link rel="stylesheet" type="text/css" href="~/Content/form/css/main.css">
