--- a/MyCalendar.MVC/Views/Event/MultiAdd.cshtml
+++ b/MyCalendar.MVC/Views/Event/MultiAdd.cshtml
@@ -23,7 +23,7 @@
                 }
             </select>
 
-            <span class="focus-input100" data-symbol="&#xf206;"></span>
+            <span class="focus-input100" data-symbol="&#xf331;"></span>
         </div>
 
         if (Model.Dates > 0)
@@ -38,7 +38,7 @@
                         <option value="@calendar.Id">@calendar.Name</option>
                     }
                 </select>
-                <span class="focus-input100" data-symbol="&#xf206;"></span>
+                <span class="focus-input100" data-symbol="&#xf32f;"></span>
             </div>
             if (Model.Dates > 1)
             {
@@ -52,18 +52,18 @@
                             <option value="@tag.Id">@tag.Name</option>
                         }
                     </select>
-                    <span class="focus-input100" data-symbol="&#xf206;"></span>
+                    <span class="focus-input100" data-symbol="&#xf188;"></span>
                 </div>
 
                 <div class="wrap-input100 validate-input">
                     <span class="label-input100">Apply same from time for each event?</span>
                     <input type="time" name="fromTime" step="300" class="form input100" />
-                    <span class="focus-input100" data-symbol="&#xf190;"></span>
+                    <span class="focus-input100" data-symbol="&#xf337;"></span>
                 </div>
                 <div class="wrap-input100 validate-input">
                     <span class="label-input100">Apply same to time for each event?</span>
                     <input type="time" name="toTime" step="300" class="form input100" />
-                    <span class="focus-input100" data-symbol="&#xf190;"></span>
+                    <span class="focus-input100" data-symbol="&#xf337;"></span>
                 </div>
             }
 
@@ -84,17 +84,17 @@
                                 <option value="@tag.Id" selected="@(Model.TagId != null && Model.TagId.Contains(tag.Id) ? true : false)">@tag.Name</option>
                             }
                         </select>
-                        <span class="focus-input100" data-symbol="&#xf206;"></span>
+                        <span class="focus-input100" data-symbol="&#xf1db;"></span>
                     </div>
                     <div class="wrap-input100 validate-input" data-validate="Start date required">
                         <span class="label-input100">Start Date</span>
                         <input type="datetime-local" id="start@(i)" name="StartDate[]" class="form input100" step="300" value="@(Model.StartDate != null && Model.StartDate[i] != null ? Model.StartDate[i].ToString("yyy-MM-ddTHH:mm") : Utils.DateTime().AddDays(i).AddHours(1).ToString("yyy-MM-ddTHH:00"))" required />
-                        <span class="focus-input100" data-symbol="&#xf190;"></span>
+                        <span class="focus-input100" data-symbol="&#xf337;"></span>
                     </div>
                     <div class="wrap-input100 validate-input" data-validate="End date required">
                         <span class="label-input100">End Date</span>
                         <input type="datetime-local" id="end@(i)" name="EndDate[]" class="form input100" step="300" value="@(Model.EndDate != null && Model.EndDate[i] != null ? Model.EndDate[i].Value.ToString("yyy-MM-ddTHH:mm") : Utils.DateTime().AddDays(i).AddHours(3).ToString("yyy-MM-ddTHH:00"))" required />
-                        <span class="focus-input100" data-symbol="&#xf190;"></span>
+                        <span class="focus-input100" data-symbol="&#xf337;"></span>
                     </div>
                 </div>
 
