--- a/MyCalendar.MVC/Views/Shared/_Layout.cshtml
+++ b/MyCalendar.MVC/Views/Shared/_Layout.cshtml
@@ -78,7 +78,7 @@
                                     </a>
                                     <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
                                         <a class="dropdown-item" style="@(Model.MenuItem.ERNewOrder ? "color:#0094ff": "")" href="@Url.Action(Url.MvcRoute(Section.ErrandRunnerNewOrder).ActionName, Url.MvcRoute(Section.ErrandRunnerNewOrder).ControllerName)">
-                                            <span class="fas fa-user-edit"></span> New Order
+                                            <span class="fas fa-user-edit"></span> New Customer/Order
                                         </a>
                                     </div>
                                 </div>
